--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
         "js": [
           "content.js"
         ],
-        "matches": ["<all_urls>"]
+        "matches": ["https://www.youtube.com/watch?v=*"]
       }
     ]
   }
