--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,7 @@
         "js": [
           "content.js"
         ],
+        "css":["style.css"],
         "matches": ["https://www.youtube.com/watch?v=*"]
       }
     ]
