--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,9 @@
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
     },
+    "background":{
+      "service_worker":"background.js"
+    },
     "content_scripts": [
       {
         "js": [
@@ -18,6 +21,7 @@
         "css":["style.css"],
         "matches": ["https://www.youtube.com/watch?v=*"]
       }
-    ]
+    ],
+    "permissions":["tabs","activeTab"]
   }
   
