changed manifest.json file to include new icons,name and description

--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,38 @@
 {
-    "manifest_version": 3,
-    "name": "youtube comments",
-    "version": "1.0",
-    "description": "Add overflow auto to youtube comments",
-  
-    "icons": {
+  "manifest_version": 3,
+  "name": "SidebarComments",
+  "version": "1.0",
+  "description": "Move the comment section to the side bar and add a scroll to recommended videos and comments",
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
+  },
+  "action": {
+    "default_icon": {
       "16": "images/icon-16.png",
       "32": "images/icon-32.png",
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
-    },
-    "background":{
-      "service_worker":"background.js"
-    },
-    "content_scripts": [
-      {
-        "js": [
-          "content.js"
-        ],
-        "css":["style.css"],
-        "matches": ["https://www.youtube.com/watch?v=*","https://www.youtube.com/*", "https://youtube.com/*"]
-      }
-    ]
-  }
-  
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "content.js"
+      ],
+      "css": [
+        "style.css"
+      ],
+      "matches": [
+        "https://www.youtube.com/watch?v=*",
+        "https://www.youtube.com/*",
+        "https://youtube.com/*"
+      ]
+    }
+  ]
+}
